--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -19,55 +19,10 @@
         android:layout_marginTop="20dp">
 
         <TextView
-            android:id="@+id/description10"
+            android:id="@+id/word4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="5"
-            android:layout_column="1"
-            android:text="TASK"
-            android:textColor="@color/White" />
-
-        <TextView
-            android:id="@+id/description9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="5"
-            android:layout_column="3"
-            android:text="TASK"
-            android:textColor="@color/White" />
-
-        <TextView
-            android:id="@+id/description8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="4"
-            android:layout_column="1"
-            android:text="TASK"
-            android:textColor="@color/White" />
-
-        <TextView
-            android:id="@+id/description7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="4"
-            android:layout_column="3"
-            android:text="TASK"
-            android:textColor="@color/White" />
-
-        <TextView
-            android:id="@+id/description5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="3"
-            android:text="TASK"
-            android:textColor="@color/White" />
-
-        <TextView
-            android:id="@+id/description6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
             android:layout_column="1"
             android:text="TASK"
             android:textColor="@color/White" />
@@ -76,13 +31,58 @@
             android:id="@+id/description4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_row="5"
+            android:layout_column="3"
+            android:text="TASK"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/word3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:text="TASK"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/description3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="3"
+            android:text="TASK"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/description2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:text="TASK"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/word2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:text="TASK"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/description1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_row="2"
             android:layout_column="3"
             android:text="TASK"
             android:textColor="@color/White" />
 
         <TextView
-            android:id="@+id/description3"
+            android:id="@+id/word1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="2"
@@ -91,7 +91,7 @@
             android:textColor="@color/White" />
 
         <TextView
-            android:id="@+id/description2"
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -100,7 +100,7 @@
             android:textColor="@color/White" />
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
