--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -79,4 +79,11 @@
                     app:met_primaryColor="#982360"
                     app:met_singleLineEllipsis="true" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/reg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="300dp"
+            android:text="Button" />
 </androidx.cardview.widget.CardView>
